Fix misaligned footer on home page

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -457,7 +457,7 @@
 
 .atx-home {
     height: 100vh;
-    margin-top: -2.4rem;
+    margin-top: -4.8rem;
     overflow-x: hidden;
     overflow-y: auto;
     overscroll-behavior-y: none;
